@@ -24,12 +24,19 @@
 #
 ################################################################
 
+2010-11-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.64 released.
+
+        * Modified Makefile.PL again to load
+          Term::Menus dependencies.
+
 
 2010-11-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.63 released.
 
-        * Modified Makefile.PL load Term::Menus dependencies.
+        * Modified Makefile.PL to load Term::Menus dependencies.
 
 
 2010-11-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
